# simple_math_agent

./: .gitignore  README.md  pyproject.toml
math_agent/: agent.py  env.sample
notes/: notes.txt
