[project]
name = "simple-math-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk==0.3.26",
    "google-adk[extensions]>=2.4.0",
    "google-cloud-aiplatform[adk,agent-engines]>=1.156.0",
    "langchain-openai>=1.3.3",
    "litellm>=1.91.0",
]
